# long-context

./: .gitignore  CLAUDE.md  PROJECT_STATUS.md  debug_output.txt  main.py  pyproject.toml
outputs/: 20250815_190708_extract_agency_building_steps.yaml  20250815_190708_report.md  20250815_193752_extract_the_step_by_step_instr.yaml  20250815_193752_report.md  20250815_195053_find_specific_tools_and_softwa.yaml  20250815_195053_report.md  20250815_195222_extract_key_points.yaml  20250815_195222_report.md  20250815_200139_extract_insights_for_what_kind.yaml  20250815_200139_report.md  20250815_200558_learn_how_to_figure_out_your_s.yaml  20250815_200558_report.md  20250815_200743_report.md  20250815_200743_test.yaml  20250815_200840_report.md  20250815_200840_test.yaml  20250815_200943_report.md  20250815_200943_test.yaml  20250815_201059_learn_something.yaml  20250815_201059_report.md  20250815_201242_learn_how_to_figure_out_your_s.yaml  20250815_201242_report.md
src/core/: chunker.py  extractor.py
src/models/: content_insight.py
src/processors/: youtube.py
